src/objects/AB2__Error_Details__c.object
<CustomObject>
    <description>Logs errors that occured with the AdBook integration</description>
    <fields>
        <fullName>AB2__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AB2__Error_Source__c</fullName>
        <label>Error Source</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Error_Time__c</fullName>
        <label>Error Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AB2__Possible_Solution__c</fullName>
        <label>Possible Solution</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AB2__ReferenceData__c</fullName>
        <description>JSON Formatted Reference Data</description>
        <label>Reference Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB2__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Error_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Details</label>
    <nameField>
        <displayFormat>ED-{0000000000}</displayFormat>
        <label>Error Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>